--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,13 @@
 body {
-background-image: url("http://www.pixelstalk.net/wp-content/uploads/2016/01/Adventure-Time-Background-for-desktop.jpg"); 
 	text-align: center;
 	font-size: xx-large;
 	font-family: "papyrus";
-	filter: blur(5px)
+	filter: blur(5px);
 }
 
 img {
-	width: 25%;
-	height: 25%;
+	width: 100%;
+	height: 100%;
 }
 
 .background {
@@ -18,7 +17,6 @@ img {
   z-index: -1;
 
   display: block;
-  background-image: url("http://www.pixelstalk.net/wp-content/uploads/2016/01/Adventure-Time-Background-for-desktop.jpg"); 
 
   width: 100%;
   height: 100%;
