--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@ body {
 	text-align: center;
 	font-size: xx-large;
 	font-family: "papyrus";
-	filter: blur(5px);
 }
 
 img {
@@ -12,8 +11,6 @@ img {
 
 .background {
   position: fixed;
-  left: 0;
-  right: 0;
   z-index: -1;
 
   display: block;
@@ -21,10 +18,6 @@ img {
   width: 100%;
   height: 100%;
 
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
   filter: blur(5px);
 }
 
@@ -33,6 +26,16 @@ div .day .hour .current{
 	color: salmon;
 	margin: auto;
 
+}
+
+
+div .current {
+
+	width: 55%;
+	margin:auto;
+	text-align: center;
+	height: 60%;
+	
 }
 
 h1 {
@@ -54,10 +57,6 @@ p {
 
 }
 
-.current {
-	padding: 1%;
-	font-size: 80px;
-}
 
 .day,.hour, .current {
 	display: inline-block;
@@ -69,19 +68,17 @@ p {
 
 }
 
-div .current {
-
-	width: 55%;
-	margin:auto;
-	text-align: center;
-	height: 60%;
-	
-}
-
-
 .day, .hour {
 	padding: 1%;
 }
+
+.current {
+	padding: 1%;
+	font-size: 80px;
+}
+
+
+
 #buttons button:hover {
 	color: grey;
 }
@@ -110,5 +107,34 @@ div .current {
 }
 
 
+input {
+    border: 2px solid white; 
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 15px;
+    background: rgba(255,255,255,0.5);
+    margin: 3%;
+    width: 5%;
+    height: 5px;
+    font-family: "papyrus";
+}
 
+input:focus, textarea:focus {
+    outline: none;
+    color: salmon;
+    text-align: center;
+     font-weight: bold;
+
+}
+
+#loadingGif {
+	width: 400px;
+}
 
