--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,11 @@ canvas {
   width: 100%;
   height: 100%;
 
-  filter: blur(5px);
+-webkit-filter: blur(5px);
+-moz-filter: blur(5px);
+-o-filter: blur(5px);
+-ms-filter: blur(5px);
+filter: blur(5px);
 }
 
 div .day .hour .current{
