--- a/styles/style.css
+++ b/styles/style.css
@@ -181,6 +181,14 @@ input:focus, textarea:focus {
     margin: auto;
     margin-bottom: 0;
     font-weight: bold;
-    text-shadow: 3.5px 2px #E6E6FA;
-	-webkit-text-stroke: 1px #E6E6FA;
+   /*  text-shadow: 3.5px 2px #E6E6FA; */
+/* 	-webkit-text-stroke: 10 #E6E6FA; */
+
+
+    text-shadow:
+    5px 2px  #E6E6FA,
+    1px -1px 0 #E6E6FA,
+    -1px 1px 0 #E6E6FA,
+    1px 1px 0 #E6E6FA;  
+
 }
